kubernetes/order-service.yaml
# Service for order service
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: order
---
# Order Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: eca-order
      containers:
      - name: order

        # only download image if not present
        imagePullPolicy: IfNotPresent

        # get from Github Packages
        image: ghcr.io/iotmaulana/order_service:latest
        securityContext:
          runAsUser: 1000

        # expose container port
        ports:
          - containerPort: 3000
