kubernetes/shipping-service.yaml
# Service for shipping service
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
    service: shipping
spec:
  selector:
    app: shipping
  ports:
  - name: http
    port: 3001
---
# Deployment shipping service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-v1
  labels:
    app: shipping
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
      version: v1
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      serviceAccountName: eca-shipping
      containers:
      - name: shipping

        # only download image if not present
        imagePullPolicy: IfNotPresent

        # get from GitHub Packages
        image: ghcr.io/iotmaulana/shipping_service:latest
        securityContext:
          runAsUser: 1000

        # expose container port
        ports:
          - containerPort: 3001
