kubernetes/eca-gateway.yaml
# Virtual Service ECA Gateway
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eca
spec:
  gateways:
    - eca-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: /order
      route:
        - destination:
            host: order
            port:
              number: 3000
---
# istio ECA IngressGateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eca-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
